@@ -1,6 +1,13 @@
 Relase 3.1.0
 ============
 
+New features
+------------
+
+- Python matrix multiplication (`__matmul__` / `@`) added to
+  R :class:`Matrix objects.
+
+
 Changes
 -------
 
